--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,14 @@ body {
     color: var(--primary-font-color);
 }
 
+ul {
+    padding-inline-start: 0;
+    list-style: none;
+}
+a{
+    text-decoration: none;
+}
+
 .container {
     background-color: #fff;
     max-width: 30rem;
@@ -69,8 +77,6 @@ header {
 }
 
 .toDoList {
-    padding-inline-start: 0;
-    list-style: none;
     max-height: 40vh;
     overflow-y: auto;
 }
@@ -105,4 +111,16 @@ header {
 .task input[type="text"] {
     border: none;
     outline: none;
+}
+
+footer{
+    margin-top: 2rem;
+}
+footer ul{
+    display: flex;
+    justify-content: center;
+}
+.icon{
+    width: 2.5rem;
+    padding: 0.3rem;
 }
