--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap');
 :root {
     --primary: #60a5fa;
     --secondary: #93c5fd;
@@ -10,7 +11,7 @@
 *::before,
 *::after {
     box-sizing: border-box;
-    font-family: "Ubuntu", sans-serif;
+    font-family: "Arvo", sans-serif;
 }
 
 body {
@@ -26,7 +27,8 @@ ul {
     padding-inline-start: 0;
     list-style: none;
 }
-a{
+
+a {
     text-decoration: none;
 }
 
@@ -38,12 +40,13 @@ a{
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 8px;
+    box-shadow: rgba(0, 0, 0, 0.2) 1.4px 2.8px 8px;
     overflow: hidden;
 }
 
 header {
-    background-color: var(--primary);
+    /* background-color: var(--primary); */
+    color: var(--primary);
     padding: .2rem 0;
 }
 
@@ -53,9 +56,13 @@ header {
     border-radius: 50%;
     outline: none;
     cursor: pointer;
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 8px 8px;
+    box-shadow: rgba(0, 0, 0, 0.2) 1.8px 3.2px 3.5px;
     background-color: #fff;
     font-weight: 600;
+}
+
+.btn:hover {
+    box-shadow: rgba(0, 0, 0, 0.2) 0.6px 1.2px 1.2px;
 }
 
 .toDoForm {
@@ -91,7 +98,7 @@ header {
     justify-content: space-between;
     background-color: var(--primary);
     color: var(--primary-font-color);
-    box-shadow: rgba(0, 0, 0, 0.2) 0px 4px 8px;
+    box-shadow: rgba(0, 0, 0, 0.2) 1.4px 2.8px 8px;
     cursor: pointer;
 }
 
@@ -104,23 +111,59 @@ header {
     text-decoration: line-through;
 }
 
-.task input[type="checkbox"] {
-    cursor: pointer;
-    accent-color: #22c55e;
+.checkbox {
+    position: relative;
 }
+.checkbox label{
+    background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 50%;
+    cursor: pointer;
+    height: 1.2em;
+    width: 1.2em;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.checkbox label:after{
+    border: 2px solid #fff;
+    border-top: none;
+    border-right: none;
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 3px;
+    height: 5px;
+    width: 10px;
+    transform: rotate(-45deg);
+    opacity: 0;
+}
+.checkbox input[type="checkbox"] {
+    visibility: hidden;
+}
+.checkbox input[type="checkbox"]:checked + label{
+    background-color: #66bb6a;
+    border-color: #66bb6a;
+}
+.checkbox input[type="checkbox"]:checked + label:after{
+    opacity: 1;
+}
+
 .task input[type="text"] {
     border: none;
     outline: none;
 }
 
-footer{
+footer {
     margin-top: 2rem;
 }
-footer ul{
+
+footer ul {
     display: flex;
     justify-content: center;
 }
-.icon{
+
+.icon {
     width: 2.5rem;
     padding: 0.3rem;
 }
