--- a/styles.css
+++ b/styles.css
@@ -68,9 +68,10 @@ header {
 
 .toDoForm {
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     gap: 1rem;
+    border: 1px solid;
 }
 
 #toDoInput {
@@ -80,15 +81,33 @@ header {
     font-size: 1em;
     outline: none;
 }
+#toDoDate {
+    cursor: pointer;
+}
 
 .toDoList {
     max-height: 40vh;
     overflow-y: auto;
+    text-align: left;
+    margin-left: .75rem;
 }
+.toDoList .message{
+    color: var(--secondary-font-color);
+    font-weight: 600;
+    padding: .65rem 0;
+}
+
+.dateHeader{
+    color: var(--secondary-font-color);
+    margin-bottom: .65rem;
+}
+.dateHeader + ul{
+    margin-bottom: 1.5rem;
+} 
 
 .task {
     border: 2px solid var(--primary);
-    margin: 0 .75rem .75rem;
+    margin: 0 .75rem .75rem 0;
     padding: 1rem;
     border-radius: .3rem;
     display: flex;
@@ -96,6 +115,7 @@ header {
     justify-content: space-between;
     background-color: var(--primary);
     color: var(--primary-font-color);
+    font-weight: 400;
     box-shadow: rgba(0, 0, 0, 0.2) 1.4px 2.8px 8px;
     cursor: pointer;
 }
